@@ -1,3 +1,14 @@
+2018-03-28  Ross Kirsling  <ross.kirsling@sony.com>
+
+        MSVC __forceinline slows down JSC release build fivefold after r229391
+        https://bugs.webkit.org/show_bug.cgi?id=184062
+
+        Reviewed by Alex Christensen.
+
+        * jit/CCallHelpers.h:
+        (JSC::CCallHelpers::marshallArgumentRegister):
+        Exempt MSVC from a single forced inline used within recursive templates.
+
 2018-03-28  Mark Lam  <mark.lam@apple.com>
 
         Enhance ARM64 probe to support pointer profiling.
